--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ espero en estas fechas poder pasarla juntos y un poco más de tiempo😻🥹 POR
 
 AYYYYYY MI AMOR🥺🥺🥺🥺 en verdad todas las fotos fueron las que hice por primera vez 🤭🤭🤭🤭🤭Asi como esta foto jsjs estaba muy nervioso y tu estabas muy hermosa🤤🤤🤤
 enserio que hermosa ibas ese dia mi amor🤤 me encantas cada dia que pasa, AMO AMO estar contigo, me encantas a cualquier hora y cualquier dia🤤 eres unicaa mi amor
-❤️ME ENAMORAS MI AMOR❤️
+❤️ME ENAMORAS CADA DIA MÁS MI AMOR❤️
 
 </tr>
 
