--- a/index.html
+++ b/index.html
@@ -43,26 +43,42 @@ porque quiero estar contigo SIEMPRE mi amor porque tambien dije que no queria ha
 <p style="background-color: pink;"
 p><font color=black>
 Asi Tambien agradecerte porque CAMBIASTE un MONTÓN tú sabes el porque lo digo, creeme que en esos momentos pasaba por mi cabeza si en verdad te merecia, Pero pues gracias a Dios cambiaste 
-YY sii talvez no por mi pero por tí si que eso es lo que importa🥰 No olvidare cuando sali a buscarte a media noche jsjsjs🤭🤭 creeme iba con miedo pero tambien la preocupacion a que te pasara algo
+YY sii talvez no por mi pero por tí si que eso es lo que importa🥰 No olvidare cuando sali a buscarte esa noche jsjsjs🤭🤭 ¿te acuerdas? creeme iba con miedo pero tambien la preocupacion a que te pasara algo
 he echo cosas que no hice por nadie más como lo hago contigo, enserio te agradezco por toda esta experiencia por todo lo compartido, por todo lo hablado, por dedicarnos unos minutos de nuestras vidas
 es algo tan simple pero tan importante en la vida de cada uno💘<br>
 
 <img src="primera.jpg"width=600 height=600><br><br>
 
 Dios MIO jsjsjs🤭 ¿te acuerdas amor? fue unas de nuestras PRIMERAS fotos JUNTOS😍 Recuerdo 100% que estaba nervioso jaja porque no sabia como en tablar una conversación formal 🤭
-jsjsjs fue muy hermoso y en verdad que bonito pasar tiempo contigo, hoy en dia ya no pasamos al parque pero puess me conformo con estar en otro lugar mientras estes tú❤️
+jsjsjs fue muy hermoso y en verdad que bonito pasar tiempo contigo, hoy en dia ya no NOS QUEDAMOS HABLAR DONDE LO HACIAMOS ANTERIORMENTE pero puess me conformo con estar en otro lugar mientras estes tú❤️
 espero en estas fechas poder pasarla juntos y un poco más de tiempo😻🥹 PORQUE ❤️❤️❤️❤️❤ TE QUIERO PARA TODAAA MI VIDAAAAAAA❤️❤️❤️❤️❤️<br><br>
 
 
 <img src="segunda.jpg"width=600 height=600><br><br>
 
 AYYYYYY MI AMOR🥺🥺🥺🥺 en verdad todas las fotos fueron las que hice por primera vez 🤭🤭🤭🤭🤭Asi como esta foto jsjs estaba muy nervioso y tu estabas muy hermosa🤤🤤🤤
-enserio que hermosa ibas ese dia mi amor🤤 me encantas cada dia que pasa, AMO AMO estar contigo, me encantas a cualquier hora y cualquier dia🤤 eres unicaa mi amor
-❤️ME ENAMORAS CADA DIA MÁS MI AMOR❤️
+enserio que hermosa ibas ese dia mi amor🤤 me encantas cada dia que pasa, AMO AMO estar contigo, me encantas a cualquier hora y cualquier dia🤤 eres unicaa 
+❤️ME ENAMORAS CADA DIA MÁS MI AMOR❤️ <br><br>
+
+<img src="tercera.jpg"width=600 height=600><br><br>
+
+Esta es una reciente 2/08/24 🤭 En verdad que bonito pasar tiempo contigo mi amorcito me haces muy feliz como quisiera tener mas tiempo para nosotros y no vernos de vez en cuando 
+Porque sinceramente te quiero para Mi VIDA, tu sabes muy bien que eres mi primer amor y pues solo espero no estar volando muy alto y que un dia tú ya no estes conmigo, Este ultimo mes
+del año solo quiero que nos dediquemos mas tiempo a Nosotros tú sabes que no ha habido un dia en que compartamos mas de lo normal.
+
+<br><br><br><br><br><br><br><br><br>
+
+
+MI AMOOOOR FALTA MÁS JSJSJSJ🤭🤭🤭🤭🤭
+PERO PUES SOLO TE MOSTRARE ESTO VA? LO OTRO YA ES SORPRESA JAJAJA
+
+
 
 </tr>
 
 
 </table>
+
+
 
 
